Proof of concept
A docker compose configuration for a celery based spider. 
The tests/celery_test.py script query all the schedds queues and send messages to the test broker. 
# How to run:

```bash 
docker-compose up --scale spider-worker=3
```

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ elasticsearch>=7.0.0,<8.0.0
 CMSMonitoring==0.3.3
 #git+https://github.com/cronosnull/CMSMonitoring.git@python3#egg=CMSMonitoring
 requests==2.22.0
+celery[redis]
