--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-htcondor==8.7.9
-elasticsearch==6.3.1
-#CMSMonitoring==0.2.6
-git+https://github.com/cronosnull/CMSMonitoring.git@python3#egg=CMSMonitoring
-requests==2.22.0
+htcondor
+elasticsearch
+requests
