--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - SPIDER_CHECKPOINT=redis://redis_checkpoint:6379/1
       - AFFILIATION_DIR_LOCATION=/cms_shared/affiliation_dir.json
+      - COLLECTORS_FILE_LOCATION=/cms_shared/collectors.json
       - PYTHONPATH=/cms-htcondor-es/src:$$PYTHONPATH
       - CMS_HTCONDOR_PRODUCER=condor-test
       - CMS_HTCONDOR_TOPIC=/topic/cms.jobmon.condor
@@ -24,16 +25,20 @@ services:
       - CMS_AMQ_USERNAME_FILE=/cms-htcondor-es/username
       - CMS_AMQ_PASSWORD_FILE=/cms-htcondor-es/password
       - REQUESTS_CA_BUNDLE=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
+
     entrypoint: ['celery', "-A", "htcondor_es.celery.celery", "worker"]
   spider-app:
     image: spider-worker
-    user: 1500:1500
+    user: 1414:1414
     depends_on:
         - spider-worker
     volumes:
       - shared_spider:/cms_shared
+    secrets:
+      - source: collectors
+        target: /cms_shared/collectors.json
     restart: 'no'
-#    entrypoint: ["/bin/bash","/cms-htcondor-es/runSchedulerAPP.sh"]
+
     environment: *env
     entrypoint: ["python","/cms-htcondor-es/tests/celery_test.py"]
 
@@ -58,6 +63,9 @@ services:
 volumes:
   shared_spider:
     driver_opts:
-      o: uid=1500,gid=1500
+      o: uid=1414,gid=1414
       device: tmpfs
       type: tmpfs
+secrets:
+  collectors:
+    file: ./etc/collectors.json
