--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - CELERY_TEST="true"
       - CMS_AMQ_USERNAME_FILE=/cms_secrets/username
       - CMS_AMQ_PASSWORD_FILE=/cms_secrets/password
+      - CMS_ES_CONF_FILE=/cms_secrets/es.conf
       - REQUESTS_CA_BUNDLE=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
     entrypoint: ['celery', "-A", "htcondor_es.celery.celery", "worker"]
     secrets: &secrets
@@ -32,6 +33,9 @@ services:
         uid: '1414'
       - source: amq_password
         target: /cms_secrets/password
+        uid: '1414'
+      - source: es_conf
+        target: /cms_secrets/es.conf
         uid: '1414'
       - source: collectors
         target: /cms_secrets/collectors.json
@@ -51,7 +55,7 @@ services:
     restart: 'no'
     environment: *env
     # entrypoint: ["python","/cms-htcondor-es/tests/celery_test.py"]
-    entrypoint: ["python","/cms-htcondor-es/celery_spider_cms.py"]
+    entrypoint: ["python","/cms-htcondor-es/celery_spider_cms.py","--feed_es"]
     depends_on:
       - spider-worker
    
@@ -78,10 +82,11 @@ services:
       - spider-worker
 volumes:
   shared_spider:
+    driver: local
     driver_opts:
-      o: uid=1414,gid=1414
-      device: tmpfs
-      type: tmpfs
+      o: bind
+      device: $HOME/tmp/shared_spider
+      type: none
 secrets:
   collectors:
     file: ./etc/collectors.json
@@ -89,3 +94,5 @@ secrets:
     file: ./username
   amq_password:
     file: ./password
+  es_conf:
+    file: ./es.conf
