--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install --upgrade pylint bandit black
 # command to run tests 
 script: 
-  - black --check -t py36 #fail if is not correctly formated
+  - black --check -t py36 src/htcondor_es ./*.py #fail if is not correctly formated
   - pylint -f colorized --disable=R,C,W --extension-pkg-whitelist=htcondor,classad  *.py src/htcondor_es 
   - bandit -r . -n 3 -ll || true #do not mark the build as failed  
