[Spider][k8s]Environment cleanup in the affiliation cron
Creation of the share folder and cleanup of the environment in the affiliation cron (as it will not need most of the secrets)

--- a/k8s/cronjobs/spider-cron-queues.yaml
+++ b/k8s/cronjobs/spider-cron-queues.yaml
@@ -12,7 +12,7 @@ spec:
           serviceAccountName: spider-account
           containers:
           - name: cms-htcondor-es
-            image: cronosnull/cms_htcondor_es:0.2
+            image: cronosnull/cms_htcondor_es:0.3
             args:
             - python
             - /cms-htcondor-es/celery_spider_cms.py
@@ -88,5 +88,6 @@ spec:
                   path: collectors
                 secretName: collectors
             - name: shared-spider
-              emptyDir: {}
+              persistentVolumeClaim:
+                claimName: affilations-cephfs-claim
 
