[k8s] Change the required resources
Reducing the required resources, adding a shared redis storate, adding RuntimeError exception to retry for in the query schedd.

--- a/k8s/deployments/spider-flower.yaml
+++ b/k8s/deployments/spider-flower.yaml
@@ -25,6 +25,12 @@ spec:
         name: spider-flower
         ports:
         - containerPort: 8888
-        resources: {}
+        resources:
+          requests:
+             cpu: 100m
+             memory: 500Mi
+          limits:
+            cpu: 300m
+            memory: 1Gi
       restartPolicy: Always
 status: {}
