--- a/k8s/deployments/spider-redis.yaml
+++ b/k8s/deployments/spider-redis.yaml
@@ -37,5 +37,6 @@ spec:
       restartPolicy: Always
       volumes:
       - name: redis-claim0
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: redis-cephfs-claim
 status: {}
