--- a/k8s/cronjobs/spider-cron-queues.yaml
+++ b/k8s/cronjobs/spider-cron-queues.yaml
@@ -13,6 +13,7 @@ spec:
           containers:
           - name: cms-htcondor-es
             image: cronosnull/cms_htcondor_es:0.3
+            imagePullPolicy: Always
             args:
             - python
             - /cms-htcondor-es/celery_spider_cms.py
