[k8s] Trying the 32bit redis to decrease memory requirements

--- a/k8s/cronjobs/spider-cron-affiliation.yaml
+++ b/k8s/cronjobs/spider-cron-affiliation.yaml
@@ -46,8 +46,9 @@ spec:
                 name: shared-spider
           volumes:
             - name: shared-spider
-              persistentVolumeClaim:
-                claimName: affilations-cephfs-claim
+              emptyDir: {}
+        #PROD#persistentVolumeClaim:
+        #PROD#  claimName: affilations-cephfs-claim
           restartPolicy: Never
           securityContext:
             fsGroup: 1414
