--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - CMS_AMQ_PASSWORD_FILE=/run/secrets/amq-password
       - CMS_ES_CONF_FILE=/run/secrets/es-conf
       - REQUESTS_CA_BUNDLE=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
+      - LOGLEVEL=DEBUG
     entrypoint: ['celery', "-A", "htcondor_es.celery.celery", "worker"]
     secrets: &secrets
       - amq-username
@@ -67,8 +68,8 @@ services:
       - $HOME/tmp/redis_cp_data:/data
   
   spider_flower:  
-    image: mher/flower
-    command: ["flower", "--broker=redis://redis:6379/0", "--port=8888"]  
+    image: spider-worker
+    command: ["celery","flower","-A", "htcondor_es.celery.celery", "--broker=redis://redis:6379/0", "--port=8888"]  
     ports:  
       - 8888:8888
     depends_on:
