[k8s][Celery] updating the k8s flower deployment

--- a/k8s/deployments/spider-worker.yaml
+++ b/k8s/deployments/spider-worker.yaml
@@ -26,6 +26,8 @@ spec:
         - -A
         - htcondor_es.celery.celery
         - worker
+        - -Q
+        - "celery,es_post,convert"
         resources:
           requests:
              cpu: 600m
