--- a/k8s/deployments/spider-flower.yaml
+++ b/k8s/deployments/spider-flower.yaml
@@ -21,7 +21,9 @@ spec:
         - flower
         - --broker=redis://$(REDIS_SERVICE_HOST):$(REDIS_SERVICE_PORT_6379)/0
         - --port=8888
-        image: mher/flower
+        - "-A"
+        - "htcondor_es.celery.celery"
+        image: cronosnull/cms_htcondor_es:0.3
         name: spider-flower
         ports:
         - containerPort: 8888
