--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ CMSMonitoring==0.4.2
 #git+https://github.com/cronosnull/CMSMonitoring.git@python3#egg=CMSMonitoring
 requests==2.22.0
 celery[redis]==4.4.2
+flower
