--- a/k8s/cronjobs/spider-cron-queues.yaml
+++ b/k8s/cronjobs/spider-cron-queues.yaml
@@ -19,7 +19,9 @@ spec:
             - /cms-htcondor-es/celery_spider_cms.py
             - --feed_es
             - --query_queue_batch_size
-            - "5000"
+            - "500"
+            - --amq_bunch_size
+            - "500"
             env: &spider_env
               - name: AFFILIATION_DIR_LOCATION
                 value: /cms_shared/affiliation_dir.json
