Refator production for syncing with upstream

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
-es.conf
-src/htcondor_es/*.pyc
-popdb.sqlite*
+*.pyc
 checkpoint*.json*
+cms_transfers.py
+es.conf
+etc/*
+etc_orig/
+fix_task_type.py
 last_mappings.json
 log/
-tmp/
-etc/*
-username
+log_history/
+log_volunteer/
 password
+popdb.sqlite*
+scripts/
+spider_cms_test.sh*
+spider_cms_*
+spider_gfactory.py
+spider_osg.py
+spider_volunteer.sh
+src/htcondor_es/*.pyc
+tmp/
+username
 venv
-*.pyc
