--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 htcondor==8.7.9
 elasticsearch>=7.0.0,<8.0.0
-CMSMonitoring==0.3.3
+CMSMonitoring==0.4.2
 #git+https://github.com/cronosnull/CMSMonitoring.git@python3#egg=CMSMonitoring
-requests==2.22.0
+requests==2.25.0
+celery[redis]==4.4.7
+flower
