--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: Build
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - 'master'
   workflow_dispatch:
     inputs:
       logLevel:
@@ -35,11 +35,17 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+    - name: Get commit short sha
+      id: vars
+      shell: bash
+      run: |
+        echo ::set-output name=sha_short::$(git rev-parse --short $GITHUB_SHA)
+
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
         load: true
-        tags: cmssw/cms-htcondor-es:${{steps.get-ref.outputs.tag}}
-    - run: docker push cmssw/cms-htcondor-es:${{steps.get-ref.outputs.tag}}
+        tags: cmssw/cms-htcondor-es:${{ steps.vars.outputs.sha_short }}
+    - run: docker push cmssw/cms-htcondor-es:${{ steps.vars.outputs.sha_short }}
