--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ CMSMonitoring==0.4.2
 requests
 celery[redis]==5.0.5
 https://github.com/mher/flower/zipball/master#egg=flower # flower dev version
+sphinx
+sphinx_rtd_theme
+myst_parser
