--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,25 @@ jobs:
         file: ./Dockerfile
         load: true
         tags: cmssw/cms-htcondor-es:${{ steps.vars.outputs.sha_short }}
-    - run: docker push cmssw/cms-htcondor-es:${{ steps.vars.outputs.sha_short }}
+    - run: |
+        docker push cmssw/cms-htcondor-es:${{ steps.vars.outputs.sha_short }}
+        docker tag  cmssw/cms-htcondor-es:${{ steps.vars.outputs.sha_short }} registry.cern.ch/cmsweb/cms-htcondor-es
+
+    - name: Login to registry.cern.ch
+      uses: docker/login-action@v1.6.0
+      with:
+        registry: registry.cern.ch
+        username: ${{ secrets.CERN_LOGIN }}
+        password: ${{ secrets.CERN_TOKEN }}
+
+    - name: Publish image to registry.cern.ch
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.CERN_LOGIN }}
+        password: ${{ secrets.CERN_TOKEN }}
+        registry: registry.cern.ch
+        repository: cmsweb/cms-htcondor-es
+        tag_with_ref: true
   deploy:
     runs-on: ubuntu-18.04
     steps:
