Refactoring for VM legacy and opensearch migration
Remove default parameters and force to be provided externally

Details:
  Move cron scripts from vocms0240 to here and refactor
  Modify htcondor_es.es to send data MULTIPLE ElasticSearch and OpenSearch instances.
  Change es.conf to etc/es_conf.json
  Get rid of hard-coded values. Parametrize important values
  Refactor Dockerfile which is so useful to run tests
  Implement test scripts which are secure to run. Parametrize required values for test usage.
  move [/home/cmsjobmon/CMS-Monit-notifier] under this repo. I opened an issue to get permission for migration but did not wait Christian's reply. I put
author comments.
  Parametrized critical breaking change from HtCondor 8 to 9
  JobMonitoring.json is enriched and shrunk by removing unnecessary string.
  Affiliations fetcher scripts are fixed
  Move .affiliation_dir.json to SPIDER_WORKDIR(/home/cmsjobmon/cms-htcondor-es)
  All scripts are gathered under scripts/
  Change username and password files as etc/amq_username and etc/amq_password
  Remove CMSMonitoring PYTHONPATH dependency and use PIP module of it
  Set StompAMQ7 doc_type as None which is set metadata.type as "metric" as default in MONIT side

Update opensearch interface

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
 *.pyc
+.affiliation_dir*.json*
+.idea
+amq_username
+amq_password
 checkpoint*.json*
 cms_transfers.py
 es.conf
+es_conf.json
 etc/*
 etc_orig/
 fix_task_type.py
 last_mappings.json
-log/
-log_history/
-log_volunteer/
+log*
 password
 popdb.sqlite*
-scripts/
 spider_cms_test.sh*
-spider_cms_*
 spider_gfactory.py
 spider_osg.py
 spider_volunteer.sh
 src/htcondor_es/*.pyc
 tmp/
 username
-venv
-.idea
+venv*
