--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-htcondor==8.7.9
-elasticsearch>=7.0.0,<8.0.0
-CMSMonitoring==0.3.3
-#git+https://github.com/cronosnull/CMSMonitoring.git@python3#egg=CMSMonitoring
-requests==2.22.0
+# be consistent with: https://gitlab.cern.ch/ai/it-puppet-hostgroup-vocms/-/blob/master/data/fqdns/vocms0240.cern.ch.yaml#L7
+# check breaking changes before any update and ask to HTCondor-users <htcondor-users> if you see any problem
+htcondor==9.0.9
+
+# will be removed after full migration to OpenSearch
+elasticsearch~=7.6.0
+
+# exact version is needed, previous versions include breaking changes;
+# installs also stomp.py==7.0.0
+CMSMonitoring==0.6.11
+
+# last version for Py v3.6
+requests~=2.27
+
+# after any OpenSearch upgrade, it may change
+opensearch-py~=2.1
+
+click
