--- a/service-logstash/logstash/etc/conf.d/logstash.conf
+++ b/service-logstash/logstash/etc/conf.d/logstash.conf
@@ -10,7 +10,6 @@ filter{
             "message" => "%{TIMESTAMP_ISO8601:timestamp} : %{WORD:log-source}:%{LOGLEVEL:log-level} - %{GREEDYDATA:message}"
         }
         overwrite => ["message"]
-	add_tag => ["valid"]
     }
 
     grok{
@@ -275,21 +274,16 @@ filter{
         match => ["timestamp", "ISO8601"]
         remove_field => ["timestamp"]
     }
-
-    if "valid" not in [tags] {
-       drop { }
-    }
-
-    mutate {
-       remove_tag => ["valid"]
-    }
 }
 
-output{
-    elasticsearch{
-        hosts => ["https://es-cms-logmon.cern.ch:443/es"]
-        index => "cms-logmon-%{+YYYY-MM-dd}"
-        user => "ABC"
-        password => "XYZ"
+output {
+    opensearch {
+        hosts           => "https://es-cms1.cern.ch:443/es"
+        index           => "logmon-spider-%{+YYYY-MM-dd}"
+        cacert          => "/etc/pki/tls/certs/CERN-bundle.pem"
+        ssl             => true
+        manage_template => false
+        user            => "logmon-spider"
+        password        => "<password>"
     }
 }
