--- a/service-logstash/logstash/etc/conf.d/logstash.conf
+++ b/service-logstash/logstash/etc/conf.d/logstash.conf
@@ -5,6 +5,10 @@ input{
     }
 }
 filter{
+    if [message] =~ "SCHEMA_VALIDATOR: unknown key=.*" {
+        drop { }
+    }
+
     grok{
         match => {
             "message" => "%{TIMESTAMP_ISO8601:timestamp} : %{WORD:log-source}:%{LOGLEVEL:log-level} - %{GREEDYDATA:message}"
