Add comment about SCHEMA_VALIDATOR filter

--- a/service-logstash/logstash/etc/conf.d/logstash.conf
+++ b/service-logstash/logstash/etc/conf.d/logstash.conf
@@ -5,7 +5,7 @@ input{
     }
 }
 filter{
-    if [message] =~ "SCHEMA_VALIDATOR: unknown key=.*" {
+    if [message] =~ "SCHEMA_VALIDATOR: unknown key=.*" { # CMSMONIT-604 - stop sending this type of warnings as they create too much traffic in our logs on OpenSearch
         drop { }
     }
 
