--- a/service-logstash/logstash/etc/conf.d/logstash.conf
+++ b/service-logstash/logstash/etc/conf.d/logstash.conf
@@ -17,18 +17,16 @@ filter{
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Schedd %{SCHEDDNAME:schedd_name}%{SPACE}history: response count:%{SPACE}%{NONNEGINT:response_count}; last completion %{DATA}; query time %{BASE10NUM:query_time} min%{GREEDYDATA}"
+            "message" => "Schedd %{DATA:schedd_name}%{SPACE}history: response count:%{SPACE}%{NONNEGINT:response_count}; last completion %{DATA}; query time %{BASE10NUM:query_time} min%{GREEDYDATA}"
         }
         add_field => {"message_type" => "history_schedd_response"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Schedd %{SCHEDDNAME:schedd_name}%{SPACE}queue: response count:%{SPACE}%{NONNEGINT:response_count}; query time %{BASE10NUM:query_time} min;"
+            "message" => "Schedd %{DATA:schedd_name}%{SPACE}queue: response count:%{SPACE}%{NONNEGINT:response_count}; query time %{BASE10NUM:query_time} min;"
         }
         add_field => {"message_type" => "queue_schedd_response"}
         overwrite => ["message"]
@@ -59,72 +57,64 @@ filter{
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Failed to query schedd for job history: %{SCHEDDNAME:schedd_name}"
+            "message" => "Failed to query schedd for job history: %{DATA:schedd_name}"
         }
         add_field => {"message_type" => "failed_to_query"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Failure when processing schedd history query on %{SCHEDDNAME:schedd_name}: %{GREEDYDATA:error_message}"
+            "message" => "Failure when processing schedd history query on %{DATA:schedd_name}: %{GREEDYDATA:error_message}"
         }
         add_field => {"message_type" => "failed_to_process_history"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Failed to query schedd %{SCHEDDNAME:schedd_name} for jobs: %{GREEDYDATA:error_message}"
+            "message" => "Failed to query schedd %{DATA:schedd_name} for jobs: %{GREEDYDATA:error_message}"
         }
         add_field => {"message_type" => "failed_to_query"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Failure when converting document on %{SCHEDDNAME:schedd_name} history: %{GREEDYDATA:error_message}"
+            "message" => "Failure when converting document on %{DATA:schedd_name} history: %{GREEDYDATA:error_message}"
         }
         add_field => {"message_type" => "failed_to_convert"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Schedd %{SCHEDDNAME:schedd_name} history timed out; ignoring progress."
+            "message" => "Schedd %{DATA:schedd_name} history timed out; ignoring progress."
         }
         add_field => {"message_type" => "schedd_history_timeout"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Queue crawler on %{SCHEDDNAME:schedd_name} has been running for more than %{NONNEGINT:timelimit} minutes; exiting"
+            "message" => "Queue crawler on %{DATA:schedd_name} has been running for more than %{NONNEGINT:timelimit} minutes; exiting"
         }
         add_field => {"message_type" => "schedd_queue_outoftime"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "No time remaining to run queue crawler on %{SCHEDDNAME:schedd_name}; exiting."
+            "message" => "No time remaining to run queue crawler on %{DATA:schedd_name}; exiting."
         }
         add_field => {"message_type" => "schedd_queue_nostart"}
         overwrite => ["message"]
     }
 
     grok{
-        patterns_dir => ["/home/stiegerb/logstash/config/patterns/"]
         match => {
-            "message" => "Schedd %{SCHEDDNAME:schedd_name} queue timed out; ignoring progress."
+            "message" => "Schedd %{DATA:schedd_name} queue timed out; ignoring progress."
         }
         add_field => {"message_type" => "schedd_queue_timeout"}
         overwrite => ["message"]
@@ -282,7 +272,7 @@ filter{
 
 output {
     opensearch {
-        hosts           => "https://es-cms1.cern.ch:443/es"
+        hosts           => "https://os-cms.cern.ch:443/os"
         index           => "logmon-spider-%{+YYYY-MM-dd}"
         cacert          => "/etc/pki/tls/certs/CERN-bundle.pem"
         ssl             => true
